# Server/docs/swagger-output.json
@@ -6,19 +6,19 @@
     "description": "RESTsul API fro SE SHOP",
     "contact": {
       "name": "Supanee Rungsirat",
-      "email": ""
+      "email": "654259012@webmail.npru.ac.th"
     }
   },
   "servers": [
     {
-      "url": "",
-      "description": ""
+      "url": "http://localhost:5000",
+      "description": "Local"
     }
   ],
   "tags": [
     {
       "name": "Product",
-      "description": "API FOR PRODUCT OBJECT"
+      "description": "API For Product Object"
     }
   ],
   "paths": {
@@ -106,6 +106,212 @@
     },
     "/api/v1/product/{id}": {
       "get": {
+        "tags": [
+          "Product"
+        ],
+        "summary": "getById product",
+        "description": "Endpoint to create a new product",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Product"
+        ],
+        "summary": "deleteProduct",
+        "description": "Endpoint to create a new product",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Product"
+        ],
+        "summary": "updateProduct",
+        "description": "Endpoint to create a new product",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "category": {
+                    "example": "any"
+                  },
+                  "description": {
+                    "example": "any"
+                  },
+                  "price": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/cart/": {
+      "post": {
+        "tags": [
+          "Cart item"
+        ],
+        "summary": "Create Cart item'",
+        "description": "Endpoint to create a new product",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "productId": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "quantity": {
+                    "example": "any"
+                  },
+                  "name": {
+                    "example": "any"
+                  },
+                  "price": {
+                    "example": "any"
+                  },
+                  "image": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Cart item"
+        ],
+        "summary": "getCart item'",
+        "description": "Endpoint to create a new product",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/cart/{email}": {
+      "get": {
+        "tags": [
+          "Cart item"
+        ],
+        "summary": "getByemail Cart item'",
+        "description": "Endpoint to create a new product",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/cart/{id}": {
+      "put": {
         "description": "",
         "parameters": [
           {
@@ -130,7 +336,11 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Cart item"
+        ],
+        "summary": "delete Cart Item",
+        "description": "Endpoint to create a new product",
         "parameters": [
           {
             "name": "id",
@@ -144,9 +354,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -155,12 +362,18 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "put": {
-        "description": "",
+      }
+    },
+    "/api/v1/cart/clear/{email}": {
+      "delete": {
+        "tags": [
+          "Cart item"
+        ],
+        "summary": "clearAll Cart Item",
+        "description": "Endpoint to create a new product",
         "parameters": [
           {
-            "name": "id",
+            "name": "email",
             "in": "path",
             "required": true,
             "schema": {
@@ -172,37 +385,11 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "summary": {
-                    "example": "any"
-                  },
-                  "content": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       }
